fix contrast error

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 /*Style titres paragraphes*/
 .h1 {
     font-family: "Open Sans";
-    color: #333333!important;
+    color: #000!important;
 }
 
 h2 {
@@ -22,11 +22,11 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700!important;
-    color: #333333!important;
+    color: #000!important;
 }
 
 h4 {
-    color: #333333!important;
+    color: #000!important;
 }
 
 p, em {
@@ -344,7 +344,8 @@ a:hover {
 }
 
 .navbar-brand {
-    height: auto;
+    height: 40px;
+    width: 215px;
     padding: 3px 15px;
     font-size: 25px;
     font-weight: normal;
@@ -353,7 +354,8 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
+    width: auto;
+    height: 100%;
     margin: 0 5px 0 0;
     display: inline;
 }
@@ -711,7 +713,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000!important;
     background-color: gr;
 }
 
@@ -806,6 +808,8 @@ label {
 }
 .portfolio-thumb {
     margin-bottom: 24px;
+    height: 270px;
+    width: 270px;
 }
 
 .portfolio-row {
